--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+0.2.1 - 01 Nov 2021
+-------------------
+- Commands output improved
+
 0.2.0 - 30 Oct 2021
 -------------------
 - Commands refactored
