--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 0.3.0 - 01 Nov 2021
 -------------------
-- Update commands improved
+- Update commands refactored
 - Commands output improved
 
 0.2.0 - 30 Oct 2021
